Fix up spacings, fix error logic in police form

--- a/crt_portal/static/sass/custom/form.scss
+++ b/crt_portal/static/sass/custom/form.scss
@@ -35,6 +35,7 @@ form#report-form {
   }
 
   .other-class-option {
+    margin-left: 2rem;
     margin-top: -3.5rem;
 
     ul li:last-child {
@@ -63,7 +64,7 @@ form#report-form {
 
   .blue-left-highlight {
     border-left: 2px solid $blue-warm-vivid-70;
-    padding-left: 0.5rem;
+    padding-left: 1rem;
   }
 
   li {
@@ -158,7 +159,6 @@ form#report-form {
 
   .crt-checkbox__label {
     @extend .usa-checkbox__label;
-    padding-left: 0;
   }
 
   .question_group_optional_tag {
